--- a/index.html
+++ b/index.html
@@ -138,15 +138,30 @@
 								<header>
 									<h2>My Readings</h2>
 								</header>
-								<p>
-									Slater, M., & Sanchez-Vives, M. V. (2016). Enhancing Our Lives with Immersive Virtual Reality. 
+								<h5>
+									Reflections on Enhancing Our Lives with Immersive Virtual Reality 
+									by Slater, M., & Sanchez-Vives, M. V. (2016). 
 									Frontiers in Robotics and AI, 3(April 2017)
+								</h5>
+								<br>
+								<p>The authors of this paper do a really good work in covering a wide spectrum of applications where Virtual Reality could be helpful, and they manage to do it in a thought provoking way. I like the fact that the paper is not focused so much on the technical aspects but instead combines the findings of several other papers to go deeper and give a more holistic approach to the matter.</p>
+								<p>First of all, I find quite interesting the authors point of view on VR as given comprehensively enough in the simple phrase “VR is reality that is virtual”, which was really groundbreaking for me as I always mistakenly thought of VR as a fake reality. Additionally I agree with the authors opinion that the real key in VR is that it can go beyond our reality.</p>
+								<p>Also the section of Immersion and Presence made me reflect on how VR can “take advantage” of the way our perception works to give someone the sense of an authentic experience, based on the fact that perception is a back and forth process, in the sense that it combines bottom-up and top-down processing. So the person who has a VR experience, as I see it, can respond to enough sensory inputs so that its brain can effectively construct the missing pieces and perceive this as reality, and this as I understood it is the basis of how immersion works.</p>
+								<p>Continuing, the part of the virtual body made the biggest impression on me, as it seems that there are many facts that emerge concerning the connection between the person that goes through a virtual experience with its virtual body. One of these is the fact that we can relatively easily adapt in using a different body than ours in VR, as shown by the experiment with the lobster where humans learn to control the “feet” on the abdominal region, and also how participants learn to use their tail to avoid harm. This in my opinion opens the way to an extreme variety of experiences that can be really mind blowing and exciting to have, but it can also help to a good extent people who are uncomfortable with their physical bodies or want to self-identify differently.</p>
+								<p>It's also really interesting that someone can choose a virtual body to create something from the perspective of a different group of people. Furthermore I must say that I didn’t expect for the virtual body to have such a strong psychological impact on the person that embodies it. For example the fact that participants whose avatar face was more attractive moved closer to other avatars, or that having a dark-skinned body lead participants to a more expressive movement. This fact is two-sided in my opinion, because from one side it can give a greater sense of equality in the virtual world, but on the other side this sense of equality is based on the stereotypes that can be transferred to the virtual world. For example, someone may choose a taller avatar because it makes them feel better in relation to other avatars, but this sense may be derived from a stereotype against shorter people. 
+									And this leads us to the fact that social interactions in VR could be really affected by the choice of the avatar. I believe that this can have some helpful applications also, as someone choosing a different virtual representation than their real characteristics, can see the word from the lens of another social group, and likely they can develop an empathy for this group and interact with it in a healthier way.
+									</p>
+								<p>There are many other domains that the paper describes where VR could have a potential benefit and improve our lives but I will go directly through the end where the authors make some remarkable comments about the concept of presence and immersion, and this really helped me to better realize these concepts. For example the remark that if someone doesn’t know or get to a point to forget that they are living a VR experience then the presence is basically lost cause the sense of being there is now a fact for them, and as weird as it sounds someone in this state might actually feel presence when getting out of this VR experience. So it really made me reflect on the matter of how much immersion can be improved in VR. Is VR capable of reaching the immersion levels of reality? Can it surpass it? Because in the end the level of immersion in reality is fixed but in VR it may always be improved.
 								</p>
-								<p style="font-size: 0.9em; color: black;">Opinion upcoming</p>
-								<p>
-									“Would You Give a Virtual Electric Shock to an Avatar?” By Mar Gonzalez-Franco, Mel Slater on April 12, 2019
-								</p>
-								<p style="font-size: 0.9em; color: black;">Opinion upcoming</p>
+								
+								<h5>
+									Reflections on “Would You Give a Virtual Electric Shock to an Avatar?” By Mar Gonzalez-Franco, Mel Slater on April 12, 2019
+								</h5>
+								<br>
+								<p>This is a study inspired from the famous Milgram’s experiment but adapted in the field of VR. This is a really interesting version of this famous experiment but also conducted in an ethical way. </p>
+								<p>A question that arose to me firstly after reading the paper is how can someone measure the obedience in this experiment, because I believe it is a gray area knowing if you are measuring the obedience or let’s say the empathy or the physiological tolerance of a person. </p>
+								<p>But nevertheless I got impressed with the outcome of this experiment that the participants essentially disobeyed when trying to obey by giving hints to the avatars. I believe the most interesting thing here, and the essence of this experiment for me, is that humans can form a connection with things that are not conscious. Maybe it was the actors' voices that influenced their connection a little bit, but the main point is that in the end they risked their obedience to authority by trying to help a human-like object created by graphics in a virtual space.  And I think this says a lot about human nature and the empathy people are able to feel, not for just other people, but essentially for everything that they can connect with. </p>
+								
 								<!-- <section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
