--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
 									<h2>My Readings</h2>
 								</header>
 								<h5>
+									Reflections on At the Heart of It All: The Concept of Presence
+									by Lombard, M., & Ditton, T. (2006).
+								</h5>
+								<br>
+								<p>This paper gives, in my opinion, a unique interpretation for presence describing it as the illusion of nonmediation. I believe that this perspective of presence is a really good way to define it, as it can give in such an abstract term such as presence, a way to intercept it in a more tangible way. And this can be done not only for the scientist that tries to measure it, but also for the everyday person that experiences the feeling of presence. Although I find it somewhat difficult to measure presence in this way, because let's say if someone has a person to always keep track of how invisible to them is the medium, then doesn’t the medium automatically become less invisible, like telling someone to try not to think of something and they think of it?</p>
+								<p>I also found quite interesting the concept of social realism versus conceptual realism. I believe that while both contribute to the feeling of presence there could be many scenarios where both of them could be low, but the feeling of perceived presence still be high, like for example in a surreal animation movie where neither the scenario is true to life nor the object or the protagonist are photorealistic</p>
+								<p>Additionally, I feel that the presence as a medium as a social actor is something that the paper describes really well considering it was written many years before. It directly made me think of technologies such as generative AI and chatbots, and how much these mediums as social actors can give a person the feeling of presence. </p>
+								<p>At last I like how the paper raises some interesting and important questions about the feeling of presence considering its psychological impact on a person, as it seems that people have some deeper psychological reasons that make us desiring the feeling of presence and trying to find it in a lot of situations, even if the cues are really primitive, but why does this happen? And considering that there will always be ways to improve the perception of presence, how far can it go?</p>
+								<h5>
 									Reflections on Enhancing Our Lives with Immersive Virtual Reality 
 									by Slater, M., & Sanchez-Vives, M. V. (2016). 
 									Frontiers in Robotics and AI, 3(April 2017)
