--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@
 									<h2>My Readings</h2>
 								</header>
 								<h5>
+									Reflections on Creating Augmented and Virtual Reality Applications: Current Practices, Challenges, and Opportunities
+									by Narges Ashtari, Andrea Bunt, Joanna McGrenere, Michael Nebeling, Parmit K. Chilana (2020)		
+								</h5>
+								<br>
+								<p>
+									This paper highlights the challenges that non-professional creators are facing when working on AR/VR projects, and I was instantly interested by this, because as a postgraduate student I have to complete a VR project and maybe there are some potential challenges I will face too.
+								</p>
+								<p>
+									To begin with I must say that I am impressed, that despite a vast amount of AR/VR applications, studies and commercial use scenarios have emerged in the span of many years, there are so many barriers for an end-user developer to understand the AR/VR landscape. And I can’t help but wonder why this is the case. Maybe it has to do with the fact that AR/VR isn’t yet completely endorsed by the market, and as a result there aren’t many candidates to invest in educating a big part of the workforce in this field. Additionally some of the companies who have adopted these technologies, may have more specific development patterns or frameworks fitting to their needs that cannot be implemented by creators outside of this company.
+								</p>
+								<p>
+									Also while this is the case, there may not be so much trial and error to know which practices are better. For example the paper notes that there is a lack of concrete design guidelines and examples, and how can someone create those guidelines, if an AR/VR product hasn’t been tested in a wide amount of everyday users to find out what a good UX is? Although there is a great difference in user testing with the 2D applications, which is a step that most of the non-professionals skip, according to the paper, because of the unfamiliarity of many users with these technologies, as well as the natural difficulties that arise when the creator cannot see what the users sees in the HMD on a VR application for example.
+								</p>
+								<p>
+									Another factor is that AR/VR is a quickly developing sector in terms of its technology, because it is a field that is strongly connected by its nature with the available hardware, so every next generation, a developer needs to keep up-to-date with the evolutions. This can be a struggle even for an expert developer in this field, let alone the end-user developers. As a result companies don’t give long term support for their products and creators need to figure out what to do with outdated manuals, tutorials or instructions.
+								</p>
+								<p>
+									At the end, I must say that I look forward to seeing which of these struggles we will encounter on a VR experience we have to build for a class project, and figure out if I can relate with the AR/VR creators that participated in this study.
+								</p>
+								<h5>
 									Reflections on At the Heart of It All: The Concept of Presence
 									by Lombard, M., & Ditton, T. (2006).
 								</h5>
@@ -220,6 +240,10 @@
 								</header>
 								<div>
 									<ul>
+									  <li>Creating Augmented and Virtual Reality Applications: Current Practices, Challenges, and Opportunities
+										by Narges Ashtari, Andrea Bunt, Joanna McGrenere, Michael Nebeling, Parmit K. Chilana (2020)</li>
+									  <li>At the Heart of It All: The Concept of Presence
+										by Lombard, M., & Ditton, T. (2006).</li>
 									  <li>Slater, M., & Sanchez-Vives, M. V. (2016). Enhancing Our Lives with Immersive Virtual Reality. 
 										Frontiers in Robotics and AI, 3(April 2017)</li>
 									  <li>“Would You Give a Virtual Electric Shock to an Avatar?” By Mar Gonzalez-Franco, Mel Slater on April 12, 2019</li>
